tests/ui/arch/debug_printf_type_checking.stderr
error: Unterminated format specifier: missing type after precision
  --> $DIR/debug_printf_type_checking.rs:10:23
   |
10 |         debug_printf!("%1");
   |                       ^^^^

error: Unterminated format specifier: missing type after decimal point
  --> $DIR/debug_printf_type_checking.rs:11:23
   |
11 |         debug_printf!("%1.");
   |                       ^^^^^

error: Unrecognised format specifier: '.'
  --> $DIR/debug_printf_type_checking.rs:12:23
   |
12 |         debug_printf!("%.");
   |                       ^^^^

error: Unrecognised format specifier: '.'
  --> $DIR/debug_printf_type_checking.rs:13:23
   |
13 |         debug_printf!("%.1");
   |                       ^^^^^

error: Unterminated format specifier: missing type after fraction precision
  --> $DIR/debug_printf_type_checking.rs:14:23
   |
14 |         debug_printf!("%1.1");
   |                       ^^^^^^

error: Missing vector dimensions specifier
  --> $DIR/debug_printf_type_checking.rs:15:23
   |
15 |         debug_printf!("%1.1v");
   |                       ^^^^^^^

error: Invalid width for vector: 5
  --> $DIR/debug_printf_type_checking.rs:16:23
   |
16 |         debug_printf!("%1.1v5");
   |                       ^^^^^^^^

error: Missing vector type specifier
  --> $DIR/debug_printf_type_checking.rs:17:23
   |
17 |         debug_printf!("%1.1v2");
   |                       ^^^^^^^^

error: Unrecognised vector type specifier: 'r'
  --> $DIR/debug_printf_type_checking.rs:18:23
   |
18 |         debug_printf!("%1.1v2r");
   |                       ^^^^^^^^^

error: Unrecognised format specifier: 'r'
  --> $DIR/debug_printf_type_checking.rs:19:23
   |
19 |         debug_printf!("%r", 11_i32);
   |                       ^^^^

error[E0308]: mismatched types
  --> $DIR/debug_printf_type_checking.rs:20:29
   |
20 |         debug_printf!("%f", 11_u32);
   |                             ^^^^^^ expected `f32`, found `u32`
   |
help: change the type of the numeric literal from `u32` to `f32`
   |
20 |         debug_printf!("%f", 11_f32);
   |                                ~~~

error[E0308]: mismatched types
  --> $DIR/debug_printf_type_checking.rs:21:29
   |
21 |         debug_printf!("%u", 11.0_f32);
   |                             ^^^^^^^^ expected `u32`, found `f32`
   |
help: change the type of the numeric literal from `f32` to `u32`
   |
21 |         debug_printf!("%u", 11u32);
   |                               ~~~

error[E0277]: the trait bound `{float}: Vector<f32, 2_usize>` is not satisfied
   --> $DIR/debug_printf_type_checking.rs:22:31
    |
22  |         debug_printf!("%v2f", 11.0);
    |         ----------------------^^^^-
    |         |                     |
    |         |                     the trait `Vector<f32, 2_usize>` is not implemented for `{float}`
    |         required by a bound introduced by this call
    |
    = help: the following other types implement trait `Vector<T, N>`:
              <BVec2 as Vector<bool, 2_usize>>
              <BVec3 as Vector<bool, 3_usize>>
              <BVec4 as Vector<bool, 4_usize>>
              <DVec2 as Vector<f64, 2_usize>>
              <DVec3 as Vector<f64, 3_usize>>
              <DVec4 as Vector<f64, 4_usize>>
              <IVec2 as Vector<i32, 2_usize>>
              <IVec3 as Vector<i32, 3_usize>>
            and 9 others
note: required by a bound in `debug_printf_assert_is_vector`
   --> $SPIRV_STD_SRC/lib.rs:144:8
    |
144 |     V: crate::vector::Vector<TY, SIZE>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `debug_printf_assert_is_vector`

error[E0308]: mismatched types
  --> $DIR/debug_printf_type_checking.rs:23:29
   |
23 |         debug_printf!("%f", Vec2::splat(33.3));
   |                             ^^^^^^^^^^^^^^^^^ expected `f32`, found struct `Vec2`

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
